# rslog

./: LICENSE  Pipfile  README.md  pyproject.toml
src/rslog/: __init__.py  rslog.py  special_strings.py
tests/: test_rslog.py
